                                                             @startuml

title __GPSTRACKAPP's Class Diagram__\n

  namespace com.anto.gpstrack {
    class com.anto.gpstrack.ApplicationConfig {
    }
  }
  

  namespace com.anto.gpstrack {
    class com.anto.gpstrack.GpsTrackApplication {
    }
  }
  

  namespace com.anto.gpstrack {
    namespace api {
      class com.anto.gpstrack.api.PhoneController {
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace api {
      class com.anto.gpstrack.api.PositionController {
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace api {
      class com.anto.gpstrack.api.WebController {
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace dto {
      class com.anto.gpstrack.dto.DeletePhoneDto {
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace dto {
      class com.anto.gpstrack.dto.GetPositionsDto {
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace dto {
      class com.anto.gpstrack.dto.LoginDto {
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace dto {
      class com.anto.gpstrack.dto.PositionDto {
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace dto {
      class com.anto.gpstrack.dto.RegisterPhoneDto {
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace dto {
      class com.anto.gpstrack.dto.RegisterPhoneResponseDto {
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace dto {
      class com.anto.gpstrack.dto.RequestAccessTokenDto {
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace dto {
      class com.anto.gpstrack.dto.RequestAccessTokenResponseDto {
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace dto {
      class com.anto.gpstrack.dto.ValidateTokenDto {
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace entities {
      class com.anto.gpstrack.entities.AccessToken {
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace entities {
      class com.anto.gpstrack.entities.Phone {
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace entities {
      class com.anto.gpstrack.entities.Position {
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace repositories {
      interface com.anto.gpstrack.repositories.AccessTokenRepository {
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace repositories {
      interface com.anto.gpstrack.repositories.PhoneRepository {
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace repositories {
      interface com.anto.gpstrack.repositories.PositionRepository {
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace service {
      class com.anto.gpstrack.service.AccessTokenService {
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace service {
      class com.anto.gpstrack.service.PhoneService {
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace service {
      class com.anto.gpstrack.service.PositionService {
      }
    }
  }
  

  com.anto.gpstrack.ApplicationConfig .up.|> org.springframework.web.servlet.config.annotation.WebMvcConfigurer
  com.anto.gpstrack.api.PhoneController o-- com.anto.gpstrack.service.PhoneService : phoneService
  com.anto.gpstrack.api.PhoneController o-- com.anto.gpstrack.service.PositionService : positionService
  com.anto.gpstrack.api.PhoneController o-- com.anto.gpstrack.service.AccessTokenService : tokenService
  com.anto.gpstrack.api.PositionController o-- com.anto.gpstrack.service.PositionService : positionService
  com.anto.gpstrack.api.WebController o-- com.anto.gpstrack.service.PhoneService : phoneService
  com.anto.gpstrack.api.WebController o-- com.anto.gpstrack.service.PositionService : positionService
  com.anto.gpstrack.api.WebController o-- com.anto.gpstrack.service.AccessTokenService : tokenService
  com.anto.gpstrack.entities.Position o-- com.anto.gpstrack.entities.Phone : phoneId
  com.anto.gpstrack.service.AccessTokenService o-- com.anto.gpstrack.repositories.AccessTokenRepository : repository
  com.anto.gpstrack.service.PhoneService o-- com.anto.gpstrack.repositories.PhoneRepository : phoneRepository
  com.anto.gpstrack.service.PhoneService o-- com.anto.gpstrack.repositories.PositionRepository : positionRepository
  com.anto.gpstrack.service.PositionService o-- com.anto.gpstrack.repositories.PhoneRepository : phoneRepository
  com.anto.gpstrack.service.PositionService o-- com.anto.gpstrack.repositories.PositionRepository : repository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
